Scheduled updates: Add schedule activation toggle control (#90559)
* Scheduled updates: Add schedule activation toggle control

* Add active form toggle to card component

* Make tag IDs unique

* Update form toggle control style

* Provide missing active prop

--- a/client/blocks/plugins-scheduled-updates/styles.scss
+++ b/client/blocks/plugins-scheduled-updates/styles.scss
@@ -92,6 +92,23 @@
 		color: var(--studio-gray-60);
 	}
 
+	.components-form-toggle {
+		.components-form-toggle__track {
+			border-color: var(--color-text) !important;
+		}
+
+		&.is-checked {
+			.components-form-toggle__track {
+				background-color: var(--color-text) !important;
+			}
+
+			.components-form-toggle__thumb {
+				background-color: #fff !important;
+			}
+		}
+
+	}
+
 	table {
 		td {
 			vertical-align: middle;
@@ -139,6 +156,10 @@
 
 		.badge-component {
 			margin-inline-start: 0.5rem;
+		}
+
+		.components-form-toggle {
+			margin-top: 0.125rem;
 		}
 	}
 
