update domains table checkbox and font size

--- a/client/my-sites/domains/domain-management/list/style.scss
+++ b/client/my-sites/domains/domain-management/list/style.scss
@@ -150,4 +150,13 @@
 			box-shadow: none;
 		}
 	}
+
+	.domains-table {
+		.components-base-control {
+			--checkbox-input-size: 16px;
+		}
+		.domains-table__domain-name {
+			font-size: 0.875rem;
+		}
+	}
 }
