--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -171,7 +171,7 @@
 .dataviews-filters__view-actions {
 	.components-search-control {
 		@include break-large {
-			min-width: 337px;
+			flex: 1;
 		}
 	}
 
@@ -330,6 +330,12 @@
 			> .components-button:has(.preview-hidden) {
 				// Since we changed the original height of the search input, we need to adjust the position of this icon.
 				margin-top: 5px;
+			}
+
+			.components-button.is-compact.has-icon:not(.has-text) {
+				@media ( max-width: 961px ) {
+					margin-inline-end: 8px;
+				}
 			}
 		}
 
