Domains: Height with few domains & disabled checkboxes

--- a/packages/domains-table/src/domains-table/style.scss
+++ b/packages/domains-table/src/domains-table/style.scss
@@ -117,6 +117,12 @@
 		}
 	}
 
+	.domains-table-checkbox-td {
+		input[type="checkbox"][disabled] {
+			cursor: no-drop;
+		}
+	}
+
 	.domains-table-row__domain {
 		flex-direction: column;
 		align-items: flex-start;
