--- a/client/reader/sidebar/style.scss
+++ b/client/reader/sidebar/style.scss
@@ -102,7 +102,7 @@ body.is-section-reader:not(.is-reader-full-post) {
 		.layout__primary > div {
 			background: var(--color-surface);
 			border-radius: 8px; /* stylelint-disable-line scales/radii */
-			box-shadow: none;
+			box-shadow: 0 0 17.4px 0 rgba(0, 0, 0, 0.05);
 			@media only screen and (min-width: 600px) {
 				height: calc(100vh - var(--masterbar-height) - 50px);
 			}
