Fix chevron color on sidebar

--- a/client/my-sites/sidebar/style.scss
+++ b/client/my-sites/sidebar/style.scss
@@ -208,7 +208,7 @@ $font-size: rem(14px);
 		}
 
 		.gridicons-chevron-right {
-			color: var(--studio-gray-20);
+			fill: var(--color-sidebar-text);
 		}
 
 		.sidebar__expandable-content {
