Fixing scope of transition which was causing a bug

--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -262,7 +262,7 @@
 		transition: all 220ms ease-out;
 	}
 	.layout__secondary {
-		transition: all 220ms ease-out;
+		transition: width 220ms ease-out;
 
 		.sidebar__header,
 		.sidebar__body,
