Add specificity to .site-monitoring__navigation-header

--- a/client/my-sites/site-monitoring/style.scss
+++ b/client/my-sites/site-monitoring/style.scss
@@ -277,7 +277,7 @@ div.is-section-site-monitoring:not(.is-global-sidebar-visible) {
 	}
 }
 
-.site-monitoring__navigation-header {
+.site-monitoring__navigation-header.navigation-header {
 	width: auto;
 	padding-bottom: 0;
 }
