Update Headers for site management panel (#90630)
* Update Headers for site management panel

* Add specificity to .site-monitoring__navigation-header

* Update padding

* Update monitoring header

--- a/client/my-sites/site-monitoring/style.scss
+++ b/client/my-sites/site-monitoring/style.scss
@@ -276,3 +276,8 @@ div.is-section-site-monitoring:not(.is-global-sidebar-visible) {
 		font-weight: 400;
 	}
 }
+
+.site-monitoring__navigation-header.navigation-header {
+	width: auto;
+	padding-bottom: 0;
+}
