--- a/apps/notifications/src/panel/boot/stylesheets/main.scss
+++ b/apps/notifications/src/panel/boot/stylesheets/main.scss
@@ -944,14 +944,14 @@ $with-sidebar-min-page-width: 1114px;
 	}
 
 	// Check if global-sidebar-visible not present
-	body:not(:has(.is-global-sidebar-visible)) & {
+	&:not(.global-sidebar-visible) {
 		@media only screen and ( min-width: $no-sidebar-min-page-width ) {
 			@include setToggleNoteBehaviour;
 		}
 	}
 
 	// Override the CSS variable value if .global-sidebar-visible is present
-	body:has(.is-global-sidebar-visible) & {
+	&.global-sidebar-visible {
 		@media only screen and ( min-width: $with-sidebar-min-page-width ) {
 			@include setToggleNoteBehaviour;
 		}
