Reader: Add bottom-line on headers

--- a/client/reader/style.scss
+++ b/client/reader/style.scss
@@ -231,6 +231,20 @@
 	}
 }
 
+.is-group-reader {
+	@media screen and (min-width: 782px) {
+		.navigation-header::after {
+			content: "";
+			display: block;
+			position: relative;
+			left: calc(-1 * (100vw - 100%)/2 - 132px);
+			margin: 24px 0;
+			width: 100vw;
+			height: 1px;
+			background: var(--color-border-secondary);
+		}
+	}
+}
 .is-group-reader .reader-notifications__panel {
 	@media only screen and ( min-width: 1114px ) {
 		.wpnc__main {
