Fix diagonal animation from Sites > My home

--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -257,7 +257,7 @@
 // Styles collapsed site list.
 .wpcom-site {
 	.layout__content {
-		transition: all 220ms ease-out;
+		transition: padding-left 220ms ease-out;
 	}
 	.layout__secondary {
 		transition: width 220ms ease-out;
