Nav Redesign: add external links for home page

--- a/client/sites-dashboard-v2/sites-dataviews/style.scss
+++ b/client/sites-dashboard-v2/sites-dataviews/style.scss
@@ -33,6 +33,12 @@
 	text-overflow: ellipsis;
 	overflow: hidden;
 	white-space: nowrap;
+	a,
+	a:hover,
+	a:focus,
+	a:visited {
+		color: var(--studio-gray-60);
+	}
 }
 
 .sites-dataviews__site-wp-admin-url {
